// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToDoListItem renders 1`] = `
<View>
  <View
    style={
      Object {
        "marginLeft": -10,
      }
    }
  >
    <TouchableHighlight
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      onPress={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }
      testID="to-do.list.item-0.row"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
        >
          <View
            accessibilityLabel="Not Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "height": 32,
                "width": 46,
              }
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "position": "absolute",
                  },
                  Object {
                    "tintColor": null,
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "height": 16,
                  "justifyContent": "center",
                  "left": 20,
                  "position": "absolute",
                  "top": 10,
                  "width": 16,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#8B969E",
                    "width": 12,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={0}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                    Object {
                      "color": "black",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              React Native for Dummies
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 13,
                    "marginTop": 3,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              Due May 31, 2037 at 11:59 PM
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "white",
                      "borderRadius": 9,
                      "borderWidth": 1,
                      "flex": 0,
                      "fontSize": 11,
                      "fontWeight": "600",
                      "marginTop": 4,
                      "overflow": "hidden",
                      "paddingBottom": 1,
                      "paddingLeft": 6,
                      "paddingRight": 6,
                      "paddingTop": 3,
                    },
                    Object {
                      "borderColor": "#374A59",
                      "color": "#374A59",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              5
               
              UNGRADED
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#c7c7cc",
                  "borderRightWidth": 2,
                  "borderTopWidth": 2,
                  "height": 10,
                  "marginLeft": 7,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </TouchableHighlight>
  </View>
</View>
`;

exports[`ToDoListItem renders discussion 1`] = `
<View>
  <View
    style={
      Object {
        "marginLeft": -10,
      }
    }
  >
    <TouchableHighlight
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      onPress={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }
      testID="to-do.list.item-0.row"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
        >
          <View
            accessibilityLabel="Not Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "height": 32,
                "width": 46,
              }
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "position": "absolute",
                  },
                  Object {
                    "tintColor": "#000",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "height": 16,
                  "justifyContent": "center",
                  "left": 20,
                  "position": "absolute",
                  "top": 10,
                  "width": 16,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#8B969E",
                    "width": 12,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={0}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Assignment 1
          </Text>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                    Object {
                      "color": "#000",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              React Native for Dummies
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 13,
                    "marginTop": 3,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              Due May 31, 2037 at 11:59 PM
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "white",
                      "borderRadius": 9,
                      "borderWidth": 1,
                      "flex": 0,
                      "fontSize": 11,
                      "fontWeight": "600",
                      "marginTop": 4,
                      "overflow": "hidden",
                      "paddingBottom": 1,
                      "paddingLeft": 6,
                      "paddingRight": 6,
                      "paddingTop": 3,
                    },
                    Object {
                      "borderColor": "#374A59",
                      "color": "#374A59",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              5
               
              UNGRADED
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#c7c7cc",
                  "borderRightWidth": 2,
                  "borderTopWidth": 2,
                  "height": 10,
                  "marginLeft": 7,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </TouchableHighlight>
  </View>
</View>
`;

exports[`ToDoListItem renders null due date 1`] = `
<View>
  <View
    style={
      Object {
        "marginLeft": -10,
      }
    }
  >
    <TouchableHighlight
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      onPress={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }
      testID="to-do.list.item-0.row"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
        >
          <View
            accessibilityLabel="Not Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "height": 32,
                "width": 46,
              }
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "position": "absolute",
                  },
                  Object {
                    "tintColor": "#000",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "height": 16,
                  "justifyContent": "center",
                  "left": 20,
                  "position": "absolute",
                  "top": 10,
                  "width": 16,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#8B969E",
                    "width": 12,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={0}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                    Object {
                      "color": "#000",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              React Native for Dummies
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 13,
                    "marginTop": 3,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              No Due Date
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "white",
                      "borderRadius": 9,
                      "borderWidth": 1,
                      "flex": 0,
                      "fontSize": 11,
                      "fontWeight": "600",
                      "marginTop": 4,
                      "overflow": "hidden",
                      "paddingBottom": 1,
                      "paddingLeft": 6,
                      "paddingRight": 6,
                      "paddingTop": 3,
                    },
                    Object {
                      "borderColor": "#374A59",
                      "color": "#374A59",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              5
               
              UNGRADED
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#c7c7cc",
                  "borderRightWidth": 2,
                  "borderTopWidth": 2,
                  "height": 10,
                  "marginLeft": 7,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </TouchableHighlight>
  </View>
</View>
`;

exports[`ToDoListItem renders published assignment 1`] = `
<View>
  <View
    style={
      Object {
        "marginLeft": -10,
      }
    }
  >
    <TouchableHighlight
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      onPress={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }
      testID="to-do.list.item-0.row"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
        >
          <View
            accessibilityLabel="Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "height": 32,
                "width": 46,
              }
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "position": "absolute",
                  },
                  Object {
                    "tintColor": "#000",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "height": 16,
                  "justifyContent": "center",
                  "left": 20,
                  "position": "absolute",
                  "top": 10,
                  "width": 16,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#00AC18",
                    "width": 12,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={0}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Assignment 1
          </Text>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                    Object {
                      "color": "#000",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              React Native for Dummies
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 13,
                    "marginTop": 3,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              Due May 31, 2037 at 11:59 PM
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "white",
                      "borderRadius": 9,
                      "borderWidth": 1,
                      "flex": 0,
                      "fontSize": 11,
                      "fontWeight": "600",
                      "marginTop": 4,
                      "overflow": "hidden",
                      "paddingBottom": 1,
                      "paddingLeft": 6,
                      "paddingRight": 6,
                      "paddingTop": 3,
                    },
                    Object {
                      "borderColor": "#374A59",
                      "color": "#374A59",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              5
               
              UNGRADED
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#c7c7cc",
                  "borderRightWidth": 2,
                  "borderTopWidth": 2,
                  "height": 10,
                  "marginLeft": 7,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#00AC18",
        "bottom": 4,
        "left": 0,
        "position": "absolute",
        "top": 4,
        "width": 3,
      }
    }
  />
</View>
`;

exports[`ToDoListItem renders quiz 1`] = `
<View>
  <View
    style={
      Object {
        "marginLeft": -10,
      }
    }
  >
    <TouchableHighlight
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      onPress={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }
      testID="to-do.list.item-0.row"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
        >
          <View
            accessibilityLabel="Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "height": 32,
                "width": 46,
              }
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "position": "absolute",
                  },
                  Object {
                    "tintColor": "#000",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "height": 16,
                  "justifyContent": "center",
                  "left": 20,
                  "position": "absolute",
                  "top": 10,
                  "width": 16,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#00AC18",
                    "width": 12,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={0}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Quiz 1
          </Text>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                    Object {
                      "color": "#000",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              React Native for Dummies
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 13,
                    "marginTop": 3,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              Due Jan 23, 2013 at 11:59 PM
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "white",
                      "borderRadius": 9,
                      "borderWidth": 1,
                      "flex": 0,
                      "fontSize": 11,
                      "fontWeight": "600",
                      "marginTop": 4,
                      "overflow": "hidden",
                      "paddingBottom": 1,
                      "paddingLeft": 6,
                      "paddingRight": 6,
                      "paddingTop": 3,
                    },
                    Object {
                      "borderColor": "#374A59",
                      "color": "#374A59",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              5
               
              UNGRADED
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#c7c7cc",
                  "borderRightWidth": 2,
                  "borderTopWidth": 2,
                  "height": 10,
                  "marginLeft": 7,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#00AC18",
        "bottom": 4,
        "left": 0,
        "position": "absolute",
        "top": 4,
        "width": 3,
      }
    }
  />
</View>
`;

exports[`ToDoListItem renders unpublished assignment 1`] = `
<View>
  <View
    style={
      Object {
        "marginLeft": -10,
      }
    }
  >
    <TouchableHighlight
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      onPress={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }
      testID="to-do.list.item-0.row"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
        >
          <View
            accessibilityLabel="Not Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "height": 32,
                "width": 46,
              }
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "position": "absolute",
                  },
                  Object {
                    "tintColor": "#000",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "height": 16,
                  "justifyContent": "center",
                  "left": 20,
                  "position": "absolute",
                  "top": 10,
                  "width": 16,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#8B969E",
                    "width": 12,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={0}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Assignment 1
          </Text>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                    Object {
                      "color": "#000",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              React Native for Dummies
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 13,
                    "marginTop": 3,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              Due May 31, 2037 at 11:59 PM
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "white",
                      "borderRadius": 9,
                      "borderWidth": 1,
                      "flex": 0,
                      "fontSize": 11,
                      "fontWeight": "600",
                      "marginTop": 4,
                      "overflow": "hidden",
                      "paddingBottom": 1,
                      "paddingLeft": 6,
                      "paddingRight": 6,
                      "paddingTop": 3,
                    },
                    Object {
                      "borderColor": "#374A59",
                      "color": "#374A59",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              5
               
              UNGRADED
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#c7c7cc",
                  "borderRightWidth": 2,
                  "borderTopWidth": 2,
                  "height": 10,
                  "marginLeft": 7,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </TouchableHighlight>
  </View>
</View>
`;
